force-app/main/default/objects/TTS_Agreement__c/TTS_Agreement__c.object-meta.xml
<CustomObject>
    <description>Manages licensing and commercial agreements related to a Technology.</description>
    <label>Agreement</label>
    <nameField>
        <displayFormat>AGR{00000}</displayFormat>
        <label>Agreement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>