force-app/main/default/objects/TTS_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Categorises the agreement by its legal or commercial purpose.</description>
    <inlineHelpText>Select the type that best describes the agreement.</inlineHelpText>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End User License Agreement (EULA)</fullName>
            </value>
            <value>
                <fullName>Software License Agreement</fullName>
            </value>
            <value>
                <fullName>Patent License Agreement</fullName>
            </value>
            <value>
                <fullName>Trademark License Agreement</fullName>
            </value>
            <value>
                <fullName>Copyright License Agreement</fullName>
            </value>
            <value>
                <fullName>Content License Agreement</fullName>
            </value>
            <value>
                <fullName>Service Level Agreement (SLA)</fullName>
            </value>
            <value>
                <fullName>Distribution Agreement</fullName>
            </value>
            <value>
                <fullName>Reseller Agreement</fullName>
            </value>
            <value>
                <fullName>Joint Development Agreement (JDA)</fullName>
            </value>
            <value>
                <fullName>Unilateral MTA</fullName>
            </value>
            <value>
                <fullName>Reciprocal MTA</fullName>
            </value>
            <value>
                <fullName>Simple MTA</fullName>
            </value>
            <value>
                <fullName>UBMTA</fullName>
            </value>
            <value>
                <fullName>International MTA</fullName>
            </value>
            <value>
                <fullName>Unilateral CA</fullName>
            </value>
            <value>
                <fullName>Mutual CA</fullName>
            </value>
            <value>
                <fullName>Non-Disclosure Agreement (NDA)</fullName>
            </value>
            <value>
                <fullName>Employee CA</fullName>
            </value>
            <value>
                <fullName>Vendor CA</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Assignment and Confidentiality Agreement (IPACA)</fullName>
            </value>
            <value>
                <fullName>Basic SRA</fullName>
            </value>
            <value>
                <fullName>Collaborative SRA</fullName>
            </value>
            <value>
                <fullName>Master SRA</fullName>
            </value>
            <value>
                <fullName>Clinical Trial SRA</fullName>
            </value>
            <value>
                <fullName>Government SRA</fullName>
            </value>
            <value>
                <fullName>Research Collaboration Agreement (RCA)</fullName>
            </value>
            <value>
                <fullName>Joint Venture Agreement (JVA)</fullName>
            </value>
            <value>
                <fullName>Strategic Alliance Agreement (SAA)</fullName>
            </value>
            <value>
                <fullName>Consortium Agreement (CA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>