force-app/main/default/objects/TTS_Agreement__c/fields/Allocation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Complete__c</fullName>
    <description>True when the Agreement has no Technology Coverage rows or its coverage allocations total exactly 100%. Use it to find agreements whose allocation split is still in progress.</description>
    <formula>OR(
    Technology_Count__c = 0,
    ROUND(Total_Allocation__c * 100, 2) = 100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked when there are no Technology Coverage rows or the allocations total 100%. Unchecked means the split is incomplete.</inlineHelpText>
    <label>Allocation Complete</label>
    <type>Checkbox</type>
</CustomField>