force-app/main/default/objects/TTS_Agreement__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>Stores the budget allocated to the agreement.</description>
    <inlineHelpText>Enter the total budget associated with the agreement.</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>