force-app/main/default/objects/TTS_Agreement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Provides the detailed description and business context of the agreement.</description>
    <inlineHelpText>Enter an overview of the agreement, including its purpose and scope.</inlineHelpText>
    <label>Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>