force-app/main/default/objects/TTS_Agreement__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Records the date and time when the agreement becomes effective.</description>
    <inlineHelpText>Enter the date and time when the agreement takes effect.</inlineHelpText>
    <label>Effective/Start Date</label>
    <type>DateTime</type>
</CustomField>