force-app/main/default/objects/TTS_Agreement__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Records the date and time when the agreement expires.</description>
    <inlineHelpText>Enter the date and time when the agreement expires.</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>