force-app/main/default/objects/TTS_Agreement__c/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <description>Identifies the jurisdiction whose law governs the agreement.</description>
    <inlineHelpText>Enter the governing law or jurisdiction specified in the agreement.</inlineHelpText>
    <label>Governing Law</label>
    <length>100</length>
    <type>Text</type>
</CustomField>