force-app/main/default/objects/TTS_Agreement__c/fields/Licensee__c.field-meta.xml
<CustomField>
    <fullName>Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the agreement to the individual Contact acting as licensee.</description>
    <inlineHelpText>Select the individual Contact receiving rights under the agreement.</inlineHelpText>
    <label>Licensee (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>