force-app/main/default/objects/TTS_Agreement__c/fields/Licensee_Account__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the agreement to the organisation acting as licensee.</description>
    <inlineHelpText>Select the organisation receiving rights under the agreement.</inlineHelpText>
    <label>Licensee (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>