force-app/main/default/objects/TTS_Agreement__c/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <description>Captures the payment obligations and conditions defined by the agreement.</description>
    <inlineHelpText>Enter the payment schedule, amounts, conditions, and other agreed financial terms.</inlineHelpText>
    <label>Payment Terms</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>