force-app/main/default/objects/TTS_Agreement__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Records when the agreement is due for renewal.</description>
    <inlineHelpText>Enter the date and time when the agreement is due for renewal.</inlineHelpText>
    <label>Renewal Date</label>
    <type>DateTime</type>
</CustomField>