force-app/main/default/objects/TTS_Agreement__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead ("primary") Technology for this agreement. Retained as a compatibility anchor; the full set of technologies an agreement covers, with allocation %, lives on the Technology Coverages related list.</description>
    <inlineHelpText>The lead technology for this agreement. Use the Technology Coverages related list to record all covered technologies and their allocation %.</inlineHelpText>
    <label>Primary Technology</label>
    <referenceTo>TTS_Technology__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>