force-app/main/default/objects/TTS_Agreement__c/fields/Technology_Count__c.field-meta.xml
<CustomField>
    <fullName>Technology_Count__c</fullName>
    <description>Number of Technology Coverage rows on this Agreement. Reporting rule: 0-1 = use Primary Technology; 2 or more = use the Technology Coverage rows.</description>
    <inlineHelpText>0-1: Primary Technology is the reporting technology. 2 or more: report on the Technology Coverage rows.</inlineHelpText>
    <label>Technology Count</label>
    <summaryForeignKey>TTS_Technology_Coverage__c.TTS_Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>