force-app/main/default/objects/TTS_Agreement__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <description>Captures the agreement's termination conditions, events, or provisions.</description>
    <inlineHelpText>Enter the conditions or events under which the agreement may be terminated.</inlineHelpText>
    <label>Termination Details</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>