force-app/main/default/objects/TTS_Agreement__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Records the date and time when the agreement was terminated.</description>
    <inlineHelpText>Enter the date and time when the agreement was terminated.</inlineHelpText>
    <label>Termination Date</label>
    <type>DateTime</type>
</CustomField>