force-app/main/default/objects/TTS_Agreement__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Stores the concise business title of the agreement.</description>
    <inlineHelpText>Enter a concise title that identifies the agreement.</inlineHelpText>
    <label>Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>