force-app/main/default/objects/TTS_Agreement__c/fields/Usage_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Usage_Restrictions__c</fullName>
    <description>Captures restrictions governing use of the subject matter covered by the agreement.</description>
    <inlineHelpText>Enter any restrictions on how the covered Technology, product, or service may be used.</inlineHelpText>
    <label>Usage Restrictions</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>