force-app/main/default/objects/TTS_Agreement__c/recordTypes/Assignment_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Assignment_Agreement</fullName>
    <active>true</active>
    <description>An agreement between two parties that transfers ownership of intellectual property</description>
    <label>Assignment Agreement</label>
</RecordType>