force-app/main/default/objects/TTS_Agreement__c/recordTypes/Collaborative_Research_Agreement_CRA.recordType-meta.xml
<RecordType>
    <fullName>Collaborative_Research_Agreement_CRA</fullName>
    <active>true</active>
    <description>An agreement between two or more organizations for the joint development of a technology or product.</description>
    <label>Collaborative Research Agreement (CRA)</label>
</RecordType>