force-app/main/default/objects/TTS_Agreement__c/recordTypes/Confidentiality_Agreement_CA.recordType-meta.xml
<RecordType>
    <fullName>Confidentiality_Agreement_CA</fullName>
    <active>true</active>
    <description>An agreement between two parties that governs the confidentiality and non-disclosure of proprietary information</description>
    <label>Confidentiality Agreement (CA)</label>
</RecordType>