force-app/main/default/objects/TTS_Agreement__c/recordTypes/Consulting_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Consulting_Agreement</fullName>
    <active>true</active>
    <description>An agreement between a company and an individual consultant for the provision of services related to the development, commercialization, or management of intellectual property</description>
    <label>Consulting Agreement</label>
</RecordType>