force-app/main/default/objects/TTS_Agreement__c/recordTypes/Joint_Venture_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Joint_Venture_Agreement</fullName>
    <active>true</active>
    <description>An agreement between two or more organizations for the formation of a new entity that will carry out a specific business activity</description>
    <label>Joint Venture Agreement</label>
</RecordType>