force-app/main/default/objects/TTS_Agreement__c/recordTypes/Licence_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Licence_Agreement</fullName>
    <active>true</active>
    <description>A licensing agreement between two organizations</description>
    <label>Licence Agreement</label>
</RecordType>