force-app/main/default/objects/TTS_Agreement__c/recordTypes/Material_Transfer_Agreement_MTA.recordType-meta.xml
<RecordType>
    <fullName>Material_Transfer_Agreement_MTA</fullName>
    <active>true</active>
    <description>An agreement between two organizations that governs the transfer of research materials between them</description>
    <label>Material Transfer Agreement (MTA)</label>
</RecordType>