force-app/main/default/objects/TTS_Agreement__c/recordTypes/Option_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Option_Agreement</fullName>
    <active>true</active>
    <description>An agreement between a company and a university or research institution that grants the company the option to license the university’s intellectual property</description>
    <label>Option Agreement</label>
</RecordType>