force-app/main/default/objects/TTS_Agreement__c/recordTypes/Sponsored_Research_Agreement_SRA.recordType-meta.xml
<RecordType>
    <fullName>Sponsored_Research_Agreement_SRA</fullName>
    <active>true</active>
    <description>An agreement between a company and a university or research institution for the sponsorship of research and development activities</description>
    <label>Sponsored Research Agreement (SRA)</label>
</RecordType>