force-app/main/default/objects/TTS_Agreement__c/listViews/All_Consulting_Agreements.listView-meta.xml
<ListView>
    <fullName>All_Consulting_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Title__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>TTS_Agreement__c.Assignment_Agreement</value>
    </filters>
    <label>All Consulting Agreements</label>
</ListView>